<resources>
    <string name="app_name">Pix-EzViewer</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="about">BRVAH http://www.recyclerview.org/\nGLIDE https://github.com/bumptech/glide
\nHam Button https://github.com/Nightonke/BoomMenu
\nRetrofit\nhttp://square.github.io/retrofit/
        \nRxjava https://github.com/ReactiveX/RxJava
        \nGlide-transformations\nhttps://github.com/wasabeef/glide-transformations
        \nSpinKitView\nhttps://github.com/ybq/Android-SpinKit
        \nBaner\nhttps://github.com/youth5201314/banner
        \nMaterialDrawer\nhttps://github.com/mikepenz/MaterialDrawer
    </string>
    <string name="focus">关注</string>
    <string name="unfocus">未关注</string>
    <string name="title_activity_fullscreen2">FullscreenActivity2</string>
    <string name="support">912756674@qq.com</string>
    <string name="thanks">感谢腐奇，爱酱,Snake，PoisonBCat,涛灬,万物皆虚,繁落,碘酒,betray,right now,niconiconi,firok,YAMAHA,OneMice,SC61帮助我测试的弹幕委员会的热心你群群友们,以及提供会员帐号的果干辣，还有积极提供建议的吸血姬，逢田梨香子的老公,吃猫的咸鱼等热心用户们</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_saucenao">SaucenaoActivity</string>
    <string name="configure">Configure</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="title_activity_hello_m">HelloMActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PxEz</string>
    <string name="nav_header_subtitle">PxEzFeedBack@outlook.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_illust_recom">IllustRecomActivity</string>
    <string name="title_activity_fling">FlingActivity</string>
    <string name="copyright">
    </string>
    <string name="dali">代理设置</string>
    <string name="checkupdate">检查更新</string>
    <string name="icon">图标</string>
    <string name="checktochang">点击更换</string>
    <string name="limit">限制</string>
    <string name="_18">隐藏遮罩</string>
    <string name="picturequality">图片质量</string>
    <string name="opensource">引用开源库</string>
    <string name="tababout">关于</string>
    <string name="tabthanks">感谢</string>
    <string name="searchsource">以图搜源</string>
    <string name="cleancatche">清除缓存</string>
    <string name="historyrecord">历史记录</string>
    <string name="appsetting">应用设置</string>
    <string name="completemessage">完善信息</string>
    <string name="logout">登出</string>
    <string name="account">账号</string>
    <string name="account_helper">Pixiv ID或邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="login_help">登录帮助</string>
    <string name="donthaveaccount">没有帐号？</string>
    <string name="error_blank_account">账号不能为空</string>
    <string name="error_blank_password">密码不能为空</string>
    <string name="error_invalid_account_password">账号或密码错误</string>
    <string name="saveformat">保存格式</string>
    <string name="savepath">保存路径</string>
    <string name="secondpath">第二路径</string>
    <string name="startpage">初始页面</string>
    <string name="try_to_login">尝试登录中</string>
    <string name="pixel">分辨率</string>
    <string name="view">查看</string>
    <string name="bookmark">收藏</string>
    <string name="viewcomment">查看评论</string>
    <string name="aboutpic">相关图片</string>
    <string name="illustid">插画ID</string>
    <string name="searchhistory">搜索历史</string>
    <string name="clearhistory">清空历史</string>
    <string name="hottags">热门标签</string>
    <string name="aday">一天</string>
    <string name="aweek">一周</string>
    <string name="amonth">一月</string>
    <string name="newwork">新作</string>
    <string name="oldwork">旧作</string>
    <string name="recent">最近</string>
    <string name="part">部分</string>
    <string name="complete">完全</string>
    <string name="title">标题</string>
    <string name="by">按照顺序</string>
    <string name="search_by">搜索筛选</string>
    <string name="some_as_tag">与标签一致</string>
    <string name="painterid">画师ID</string>
    <string name="word">综合</string>
    <string name="developer">开发</string>
    <string name="news">动态</string>
    <string name="saveselectpic">保存选定动态图？</string>
    <string name="goodpfriend">好P友</string>
    <string name="pref_language">语言</string>
    <string name="themecoloful">主题样式</string>
    <string name="setting">设置</string>
    <string name="proxy">不启用直连</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="abouts">关于</string>
    <string name="choice">选择</string>
    <string name="crash_report">报告</string>
    <string name="needstatusbar">异形屏：图片详情状态栏不沉浸</string>
    <string name="changeicons">更换图标</string>
    <string name="supporttitle">支持</string>
    <string name="viewreport">查看报告</string>
    <string name="animation">更多动画</string>
    <string name="auto_check_update">自动检查更新</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="choice_date">选择时间段</string>
    <string name="task_setting">任务设置</string>
    <string name="all_resume">全部恢复</string>
    <string name="all_cancel">清空列队</string>
    <string name="finished_cancel">移除已完成任务</string>
</resources>