<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_action_logo"
            android:title="@string/searchsource" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_action_lajitong"
            android:title="@string/cleancatche" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_action_shijian"
            android:title="@string/historyrecord" />
        <item
            android:icon="@drawable/ic_action_theme"
            android:title="@string/themecoloful"
            android:id="@+id/nav_theme"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_action_share_setting"
            android:title="@string/appsetting" />

        <item
            android:id="@+id/nav_regist"
            android:title="@string/completemessage"
            android:visible="false" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_action_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_close_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
