<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:iconifiedByDefault="false"
            android:text="@string/searchhistory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.zhy.view.flowlayout.TagFlowLayout
            android:id="@+id/search_page_flowlayout"
            android:minHeight="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/textView_clearn"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content" android:layout_marginTop="50dp"
            android:text="@string/clearhistory"
            android:layout_gravity="center"/>
        <TextView
            android:layout_marginStart="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hottags" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_searhm"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
